--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "start": "ng serve --watch",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint"
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
